changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Not finding an archetype in second_arch_pass indicates a mistake in
 archetypes file, so it's better to just exit so it gets fixed instead
 of leading to issues later on.
Nicolas Weeger 2009-11-16

Rewrite hiscore.c module. Now the highscore file is read once when the
server is started and written whenever it changes. Adding new entries and
generating output for the 'hiscore command do not anymore read the
highscore file from disk.
Andreas Kirschbaum 2009-11-15

Remove support for undefined translations 'nl', 'de', and 'it'. Removes
some error messages at startup.
Andreas Kirschbaum 2009-11-14

Remove 'explore' mode.
Andreas Kirschbaum 2009-11-14

Fix formatting of 'hiscore' command output.
Andreas Kirschbaum 2009-11-13

Omit objects below the floor from the ground view.
Andreas Kirschbaum 2009-10-29

Fix exit location for the goto command in server/c_wiz.c (was broken when exit
coordinates recently changed so that (-1,-1) meant default coordinates).
Arvid Norlander 2009-10-29

Disable [Debug] messages by default. Use the -d command-line option to
enable debug messages.
Andreas Kirschbaum 2009-10-25

Fix incorrect error message for throwing skill when no throwable object
was found.
Andreas Kirschbaum 2009-10-25

Fix checks for incorrect/missing parameters of 'abil' command.
Andreas Kirschbaum 2009-10-25

Adapt regression test to changed spell parameters (r12127).
Andreas Kirschbaum 2009-10-24

Fix #2879249 (SIGSEGV on transport moving across some edges of tiled maps).
Andreas Kirschbaum 2009-10-23

Change exits pointing to new map's default coordinates from (0,0) to