@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Make utils/cre actually build and link.
+Nicolas Weeger 2009-11-16
+
 Not finding an archetype in second_arch_pass indicates a mistake in
  archetypes file, so it's better to just exit so it gets fixed instead
  of leading to issues later on.
